--- a/4/4.2/Makefile
+++ b/4/4.2/Makefile
@@ -1,5 +1,18 @@
+#compiler
+CC = gcc
+CFALGS = -Wall -Wextra -Iunity -Isrc
+
+#dirs and files
+SRC = src
+TEST = tests/tests.c
+UNITY = unity/*.c
+PROG =  src/queue.c
+
 all:
-	gcc main.c queue.c -o queue
+	gcc $(CFALGS) $(PROG) main.c -o bin/queue
+
+test:
+	gcc $(CFALGS) $(PROG) $(TEST) $(UNITY) -o bin/test
 
 clear:
-	rm -rf queue
+	rm -rf bin/*
