--- a/4/4.3/Makefile
+++ b/4/4.3/Makefile
@@ -1,20 +1,19 @@
+#compiler
+CC = gcc
+CFALGS = -Wall -Werror -Iunity -Isrc
+
+#dirs and files
+SRC = src
+TEST = tests/tests.c
+UNITY = unity/*.c
+PROG =  src/tree.c src/contacts.c
+
 all:
-	gcc main.c contacts.c -o contacts
+	gcc $(CFALGS) $(PROG) main.c -o bin/contacts
 
-test_1:
-	gcc -DTEST_1=1 main.c contacts.c tests.c tree.c -o test_1
+test:
+	gcc $(CFALGS) $(PROG) $(TEST) $(UNITY) -o bin/test
 
-test_2:
-	gcc -DTEST_2=1 main.c contacts.c tests.c tree.c -o test_2
+clear:
+	rm -rf bin/*
 
-test_3:
-	gcc -DTEST_3=1 main.c contacts.c tests.c tree.c -o test_3
-
-test_4:
-	gcc -DTEST_4=1 main.c contacts.c tests.c tree.c -o test_4
-
-test_5:
-	gcc -DTEST_5=1 main.c contacts.c tests.c tree.c -o test_5
-
-clear_tests:
-	rm -rf test_*
